[gd_scene load_steps=23 format=2]

[ext_resource path="res://Art/submit_btn_fg_hover.png" type="Texture" id=1]
[ext_resource path="res://MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://Art/chat_item_bg.png" type="Texture" id=3]
[ext_resource path="res://Art/submit_btn_fg_normal.png" type="Texture" id=4]
[ext_resource path="res://Art/submit_btn_fg_pressed.png" type="Texture" id=5]
[ext_resource path="res://firebase-ui/database_box_containers/vboxcontainer/FirebaseVBoxContainer.tscn" type="PackedScene" id=6]
[ext_resource path="res://ChatBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Login.gd" type="Script" id=8]
[ext_resource path="res://LoginPopup.gd" type="Script" id=9]
[ext_resource path="res://Art/login_btn_fg_pressed.png" type="Texture" id=10]
[ext_resource path="res://Art/login_btn_fg_hover.png" type="Texture" id=11]
[ext_resource path="res://Art/signup_btn_fg_pressed.png" type="Texture" id=12]
[ext_resource path="res://Art/signup_btn_fg_hover.png" type="Texture" id=13]
[ext_resource path="res://Art/signup_btn_fg_normal.png" type="Texture" id=14]
[ext_resource path="res://Art/login_btn_fg_normal.png" type="Texture" id=15]
[ext_resource path="res://ChatApp.gd" type="Script" id=16]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 84, 22 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 84, 22 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="MainScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 84, 84 )
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="ChatControl"]
margin_right = 84.0
margin_bottom = 46.0
rect_min_size = Vector2( 84, 46 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FirebaseVBoxContainer" parent="ChatControl/ScrollContainer" instance=ExtResource( 6 )]
margin_left = 0.0
margin_right = 84.0
margin_bottom = 46.0
rect_min_size = Vector2( 84, 0 )
rect_clip_content = true
size_flags_horizontal = 1
size_flags_vertical = 3
custom_constants/separation = 1
alignment = 0
ItemTemplate = ExtResource( 7 )
CurrentPath = "OneBitChat/debug/chats"

[node name="VBoxContainer" type="VBoxContainer" parent="ChatControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitText" type="LineEdit" parent="ChatControl/VBoxContainer"]
margin_right = 84.0
margin_bottom = 18.0
rect_min_size = Vector2( 84, 18 )
rect_clip_content = true
size_flags_horizontal = 6
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
max_length = 14
placeholder_text = "What do?"
placeholder_alpha = 1.0
caret_blink = true
caret_blink_speed = 0.5

[node name="SubmitButton" type="TextureButton" parent="ChatControl/VBoxContainer"]
margin_left = 25.0
margin_top = 22.0
margin_right = 58.0
margin_bottom = 34.0
rect_min_size = Vector2( 33, 12 )
size_flags_horizontal = 6
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="LoginPopup" type="PopupPanel" parent="."]
pause_mode = 2
margin_right = 84.0
margin_bottom = 84.0
custom_styles/panel = SubResource( 3 )
popup_exclusive = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="LoginPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LoginPopup/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 68.0
margin_bottom = 80.0
custom_constants/separation = 3
script = ExtResource( 8 )

[node name="Email" type="LineEdit" parent="LoginPopup/MarginContainer/VBoxContainer"]
margin_right = 60.0
margin_bottom = 12.0
custom_styles/focus = SubResource( 4 )
context_menu_enabled = false
placeholder_text = "Email"
placeholder_alpha = 1.0
caret_blink = true

[node name="Username" type="LineEdit" parent="LoginPopup/MarginContainer/VBoxContainer"]
margin_top = 15.0
margin_right = 60.0
margin_bottom = 27.0
custom_styles/focus = SubResource( 5 )
max_length = 8
context_menu_enabled = false
placeholder_text = "Username"
placeholder_alpha = 1.0
caret_blink = true

[node name="Password" type="LineEdit" parent="LoginPopup/MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 60.0
margin_bottom = 42.0
custom_styles/focus = SubResource( 6 )
secret = true
context_menu_enabled = false
placeholder_text = "Password"
placeholder_alpha = 1.0

[node name="Signin" type="TextureButton" parent="LoginPopup/MarginContainer/VBoxContainer"]
margin_left = 13.0
margin_top = 45.0
margin_right = 46.0
margin_bottom = 57.0
size_flags_horizontal = 6
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
stretch_mode = 5

[node name="Signup" type="TextureButton" parent="LoginPopup/MarginContainer/VBoxContainer"]
margin_left = 13.0
margin_top = 60.0
margin_right = 46.0
margin_bottom = 72.0
size_flags_horizontal = 6
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )
stretch_mode = 5

[connection signal="pressed" from="ChatControl/VBoxContainer/SubmitButton" to="." method="_on_SubmitButton_pressed"]
